--- a/atividade-4/index.html
+++ b/atividade-4/index.html
@@ -10,9 +10,9 @@
         <nav class="nav-container">
           <h3 class="text">Nome da empresa que não existe</h3>
           <ul>
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
+            <li><a href="../atividade-1/index.html">Link 1</a></li>
+            <li><a href="../atividade-2/index.html">Link 2</a></li>
+            <li><a href="../atividade-3/index.html">Link 3</a></li>
           </ul>
         </nav>
     </header>
