--- a/projeto prova 2/marketeiro.html
+++ b/projeto prova 2/marketeiro.html
@@ -11,6 +11,7 @@
 
     <header>
         <h1>Prova da Loja de Informática</h1>
+        <div class="link__container">
         <nav>
             <a href="index.html">Home</a>
             <a href="compProdutos.html">Produtos</a>
@@ -20,6 +21,7 @@
         <div class="carrinho">
             <span id="carrinho-contagem">0</span>
             <img src="./img/cart-icon.png" alt="Carrinho de Compras">
+        </div>
         </div>
     </header>
 
